ensures proper rendering and touch zooming on mobile devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,10 @@ body {
   	color: black;
   	float: right;
  }
-
  .main {
  	color: white;
  }
+
+/* h1, p {
+ 	color: white;
+ }*/
